# AjusteOnuDeReferencia

./: .gitignore  Cargo.toml  README.md  build.rs
config/: log4rs.yaml
src/: main.rs
src/conf/: config_args.rs
src/config/: config_args.rs
src/domain/: access.rs  adjustment.rs  constants.rs  user.rs
src/functions/: clear_terminal.rs  convert2int.rs  is_ethernet_connected.rs  ping.rs  read_float_from_keyboard.rs  read_int_from_keyboard.rs  shutdown.rs  ssh_connection.rs
